dashboard admin user ok
admins have the possibility to activate, desactivate, declare a user as admin or editor.

--- a/views/user/password.twig
+++ b/views/user/password.twig
@@ -14,7 +14,7 @@
    
 			 <div class="intro-text col-12 row justify-content-center">
 			 
-	        	<h1 class="intro-heading text-uppercase p-5">Page connexion</h1>
+	        	<h1 class="intro-heading text-uppercase p-5">Récupération du mot de passe</h1>
 			</div>
 			<div class="text-center mb-5">
 				{% include 'success.twig' %} 
@@ -23,14 +23,14 @@
 				<div class="text-center col-lg-12 row justify-content-center ">
 					<div class="row  mb-4 pb-2">
 						{{ form.input ('login', 'Votre login', {autofocus:'autofocus'} )}}
-						{{ form.input ('password', 'Votre mot de passe', {type: 'password'} )}}
+						{{ form.input ('email', 'Votre email', {type: 'email'} )}}
 					</div>
 				</div>
 				<div class="row justify-content-center my-5">
 					<div class="pr-3">
 						<button class='btn btn-primary' type="submit" >Envoyer</button>
 					</div>
-					<a href="/password">Mot de passe oublié</a>
+					
 				</div>
 			</form>
 			
