--- a/views/templates/layoutBack.twig
+++ b/views/templates/layoutBack.twig
@@ -37,13 +37,13 @@
 
 <body id="page-top">
 
-<div class="d-md-none">
+<!-- <div class="d-md-none">
  {% include "navbarSM.twig" %}
 </div>
-
-<div class="d-none d-md-block">
-  {% include "navbarLG.twig" %}
-</div>
+ -->
+<!-- <div class="d-none d-md-block"> -->
+  {% include "navbarBack.twig" %}
+<!-- </div> -->
 
 
   {{ block ('content')}}
