--- a/views/templates/navbarBack.twig
+++ b/views/templates/navbarBack.twig
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg  fixed-top bg-light shadow col col-sm-12 " id="backNav">
-            
+       <div class="container">     
       <div>
             <a class="" href="/">Accueil</a>
       </div>
@@ -33,6 +33,12 @@
                   <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
                   Paramètres
                 </a>
+                  {% if session.user.is_admin == 1 %}
+                  <a class="dropdown-item" href="/admin/users">
+                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
+                      Tableau de bord utilisateur
+                  </a>
+                {% endif %}
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#logoutModal" data-toggle="modal" >
                   <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
@@ -42,5 +48,5 @@
             </li>
 
           </ul>
-
+</div>
         </nav>
