--- a/views/templates/navbarBack.twig
+++ b/views/templates/navbarBack.twig
@@ -11,7 +11,7 @@
             <!-- Nav Item - User Information -->
             <li class="nav-item dropdown ">
               <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2">{{session.access.login|capitalize}}</span>
+                <span class="mr-2 lg">Menu</span>
                 <img class="img-profile rounded-circle" src="">
               </a>
               <!-- Dropdown - User Information -->
