--- a/views/templates/homePage.twig
+++ b/views/templates/homePage.twig
@@ -155,7 +155,7 @@
                 </a>
               </li>
               <li class="">
-                <a href="#">
+                <a href="#" download="">
                   <div class="fab fa-lien_cv">Mon CV</div>
                 </a>
               </li>
