--- a/views/user/users.twig
+++ b/views/user/users.twig
@@ -117,25 +117,26 @@
 													<h5>Role de l'utilisateur</h5>
 													<div class="btn-group btn-group-toggle my-4" data-toggle="buttons">
 														<label class="btn btn-info mr-3 {% if user.is_admin == 0 %} active {% endif %}">
-															<input type="radio" name="is_admin">Editeur
-														</label>
-														<label class="btn btn-info {% if user.is_admin == 1 %} active {% endif %}">
-															<input type="radio" name="is_admin">Administrateur
-														</label>
+														<input type="radio" name="is_admin" value="0" {% if user.is_admin == 0 %} checked {% endif %}>Editeur
+													</label>
+													<label class="btn btn-info {% if user.is_admin == 1 %} active {% endif %}">
+														<input type="radio" name="is_admin" value="1" {% if user.is_admin == 1 %} checked {% endif %}>Administrateur
+													</label>
 													</div>
 												</div>
 												<div class="col-md-6">
 													<h5>Utilisateur actif ? </h5>
 													<div class="btn-group btn-group-toggle my-4" data-toggle="buttons">
 														<label class="btn btn-info mr-3 {% if user.activate == 1 %} active {% endif %}">
-															<input type="radio" name="activate">Utilisateur actif
-														</label>
-														<label class="btn btn-info {% if user.activate == 0 %} active {% endif %}">
-															<input type="radio" name="activate">Utilisateur inactif
-														</label>
+														<input type="radio" name="activate" value="1" {% if user.activate == 1 %} checked {% endif %}>Utilisateur actif
+													</label>
+													<label class="btn btn-info {% if user.activate == 0 %} active {% endif %}">
+														<input type="radio" name="activate" value="0" {% if user.activate == 0 %} checked {% endif %}>Utilisateur inactif
+													</label>
 													</div>
 												</div>
 												<div class="col-md-12 text-center my-5">
+													<input type="hidden" name="id" value="{{user.id}}">
 													<button class="btn btn-primary text-center" type="submit" >Valider les modifications</button>
 												</div>
 											</form>
