--- a/views/article/admin/articles.twig
+++ b/views/article/admin/articles.twig
@@ -10,7 +10,7 @@
 {# alert success or not if update or creation are donne #}
 	<section class="bg-light page-section text-center" role="alert">
 
-		<div class=" col-md-2 align-self-start">
+		<div class=" col-md-2 align-self-start d-none d-md-block">
 			<button class="btn btn-primary backButton"> Retour</button>
 		</div>
 {% include 'success.twig' %} 
