--- a/views/article/admin/create.twig
+++ b/views/article/admin/create.twig
@@ -65,15 +65,9 @@
 								
 
 								</div>		
-								<div class="row">
-									<div class="col-md-4 text-right">
-										<button class="btn btn-primary backButton" type ="button">Retour</button>  
-									</div>
+								<div class="row justify-content-md-center">
 									<div class="col-md-4 text-center">
 										<button class="btn btn-primary" type="submit">Valider</button>
-									</div>
-									<div class="col-md-4 text-left">
-										<button class="btn btn-primary" type="reset">Réinitialiser</button>
 									</div>
 								</div>
 							</div>
