--- a/views/user/settings.twig
+++ b/views/user/settings.twig
@@ -9,7 +9,7 @@
 <main>
 
 	<section class="bg-light page-section text-center">
-	    <div class=" col-md-2 align-self-start">
+	    <div class=" col-md-2 align-self-start d-none d-md-block">
 			<button class="btn btn-primary backButton"> Retour</button>
 		</div>
 
