--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -634,80 +634,74 @@ ul.social-buttons li a div {
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
-@media (min-width: 768px) {
-  .page404 .intro-text {
-    padding-top: 300px;
-    padding-bottom: 200px;
-  }
-  .page404 .intro-text .intro-lead-in {
-    font-size: 40px;
-    font-style: italic;
-    line-height: 40px;
-    margin-bottom: 25px;
-    font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-  }
-  .page404 .intro-text .intro-heading {
-    font-size: 75px;
-    font-weight: 700;
-    line-height: 75px;
-    margin-bottom: 50px;
-    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-  }
-
-  .expandable{
-  display:none;
-  }
-
-  .expandable a{
-    margin-left: 33%; 
-  }
-
-  #Published:checked ~ .expandable, #Published:checked ~* .expandable{
-    display:flex;
-    flex-direction: row;
-    margin-bottom: 50px;
-    margin-top:10px;
-
-  }
-
+ 
   .articles {
     text-align: center;
-    padding-top: 150px;
+    padding-top: 50px;
     padding-bottom: 100px;
   }
 
-  .visibility{
-    visibility: hidden;
+
+
+
+@media (min-width: 768px) {
+    .page404 .intro-text {
+      padding-top: 300px;
+      padding-bottom: 200px;
+    }
+    .page404 .intro-text .intro-lead-in {
+      font-size: 40px;
+      font-style: italic;
+      line-height: 40px;
+      margin-bottom: 25px;
+      font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    }
+    .page404 .intro-text .intro-heading {
+      font-size: 75px;
+      font-weight: 700;
+      line-height: 75px;
+      margin-bottom: 50px;
+      font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    }
+
+    .expandable{
+    display:none;
+    }
+
+    .expandable a{
+      margin-left: 33%; 
+    }
+
+    #Published:checked ~ .expandable, #Published:checked ~* .expandable{
+      display:flex;
+      flex-direction: row;
+      margin-bottom: 50px;
+      margin-top:10px;
+
+    }
+
+   
+    .visibility{
+      visibility: hidden;
+    }
+
+  /*//////////////////////////////////////// pages back /////////////////////////////////////////////////////////////*/
+
+  /*navbar back*/
+  .backNav{
+    background-color: white;
   }
 
-/*//////////////////////////////////////// pages back /////////////////////////////////////////////////////////////*/
+  .fixed-top {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+  }
 
-/*navbar back*/
-.backNav{
-  background-color: white;
-}
-
-.fixed-top {
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 1030;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  .articles {
+    padding-top: 150px;
+  }
 
 }
