--- a/views/comment/createComment.twig
+++ b/views/comment/createComment.twig
@@ -14,65 +14,68 @@
 			
 
 						
-		{# sidebar : display all articles in bdd#}
-			<nav class="nav flex-column col-md-2 ">
-				<div class="col-12 "> 
-					<div class=" text-center mt-4 "> 
-						<h4 class="mb-4">Tous les articles</h4>
-						{% for key, value in options %}
-							{% if key matches '/[0-9]/'%}  
-								<div class="card mt-4">
-									<div class="card-block text-center">
-										<div>
-											<a class="no-gutters " href="/articles/{{value.id}}" id="{{value.id}}">
-												<h5 class="card-title mt-2">{{value.title |title }}</h5>
+		{# sidebar : display all articles #}
+			<div class="d-flex flex-column col-md-2 mt-0">
+				<nav class="navbar navbar-expand-md ">
+					 <button class=" navbar-toggler navbar-toggler-right btn btn-primary btn-sm mb-5" type="button" data-toggle="collapse" data-target="#articleDropdown" aria-controls="articleDropdown" aria-expanded="false" aria-label="Toggle navigation">
+			            Tous les articles       
+			            <i class="fas fa-bars"></i>
+			        </button>
+					<div class="collapse navbar-collapse" id="articleDropdown" >
+					 	<ul class="navbar-nav d-flex flex-column">	
+			             
+							{% for key, value in options %}
+								{% if key matches '/[0-9]/'%}  
+									<li class="nav-item">
+										<div class="nav-link js-scroll-trigger">
+											<a class=" " href="/articles/{{value.id}}" id="{{value.id}}">
+												<h5 class="">{{value.title |title }}</h5>
 											</a>
-											<div class="card-body py-1 px-1">
-												<p class="mb-1">{{value.description|title|striptags('<br><p>')|raw }}</p>
-											</div>
+												
+											<p class="mb-1">{{value.description|title|striptags('<br><p>')|raw }}</p>
 										</div>
-									</div>
+									</li>
+								{% endif %}
+							{% endfor %}
+						</ul>
+					</div>
+				</nav>
+			</div>
+
+
+
+
+			<div class="d-flex flex-column col-md-10">
+				<div class="  text-center pb-3 ">
+		{# articles #}				
+					<div class="card-block text-center px-5">		
+						<div class ="h2 card-text pb-5">{{results.article.description}}
+						</div>
+						<div class="card-text text-justify pb-2">{{results.article.content | striptags('<br><p>')|raw}}
+						</div> 
+						<div class="text-right text-muted"> {{results.article.author | title}}, publié le {{results.article.date_publication}}
+						</div>
+					</div>
+
+	{# comments #}
+					<div class="card-block text-center pt-5 ">	
+						{% for key, comments in results.comments %} 
+							{% if comments.publicated == 1 %}
+								<div class="card mb-3 px-3 py-2">
+									<p class="text-left">{{comments.author | title }} a écrit : </p> 
+									<div class="card-text text-justify pb-y">{{comments.comment | striptags('<br><p>')|raw}}
+									<p class="text-right">{{comments.date_comment}}</p> 
+										{% if comments.admin_answer != "" %}
+										<div class="card mb-3 mx-3 px-3 my-3 pt-3"> Réponse de {{ results.article.author }} :  
+											{{comments.admin_answer | striptags('<br><p>')|raw}}
+										</div>
+										{% endif %}
+									</div> 
 								</div>
 							{% endif %}
-						{% endfor %}
+						{% endfor %} 
 					</div>
 				</div>
-			</nav>
-
-
-
-
-		<div class="d-flex flex-column col-md-10">
-			<div class="  text-center pb-3 ">
-	{# articles #}				
-				<div class="card-block text-center px-5">		
-					<div class ="h2 card-text pb-5">{{results.article.description}}
-					</div>
-					<div class="card-text text-justify pb-2">{{results.article.content | striptags('<br><p>')|raw}}
-					</div> 
-					<div class="text-right text-muted"> {{results.article.author | title}}, publié le {{results.article.date_publication}}
-					</div>
-				</div>
-
-{# comments #}
-				<div class="card-block text-center pt-5 ">	
-					{% for key, comments in results.comments %} 
-						{% if comments.publicated == 1 %}
-							<div class="card mb-3 px-3 py-2">
-								<p class="text-left">{{comments.author | title }} a écrit : </p> 
-								<div class="card-text text-justify pb-y">{{comments.comment | striptags('<br><p>')|raw}}
-								<p class="text-right">{{comments.date_comment}}</p> 
-									{% if comments.admin_answer != "" %}
-									<div class="card mb-3 mx-3 px-3 my-3 pt-3"> Réponse de {{ results.article.author }} :  
-										{{comments.admin_answer | striptags('<br><p>')|raw}}
-									</div>
-									{% endif %}
-								</div> 
-							</div>
-						{% endif %}
-					{% endfor %} 
-				</div>
-			</div>
 		
 
 {# add comment #}	
@@ -90,11 +93,8 @@
 							<div >
 								{{ form.textarea ('comment', 'Votre commentaire', { class:'tinyMCE'})}}
 							</div>
-							<div class="row ">
-								<div class="col-md-4">
-									<button class="btn btn-primary backButton" type ="button">Retour</button>  
-								</div>
-								<div class="col-md-4">
+							<div class="row d-flex justify-content-center">
+								<div class="col-md-4 ">
 									<button class="btn btn-primary" type="submit" name="articleId" value={{results.article.id}}>Valider le commentaire</button>
 								</div>
 								
