--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -22,7 +22,7 @@ a:hover {
 }
 
 .text-primary {
-  color: #fed136 !important;
+  color: #fed136
 }
 
 h1,
@@ -109,13 +109,13 @@ img::-moz-selection {
 
 .btn-primary:active, .btn-primary:focus, .btn-primary:hover {
   background-color: #fec810 !important;
-  border-color: #fec810 !important;
+  border-color: #fec810;
   color: white;
 }
 
 .btn-primary:active, .btn-primary:focus {
   -webkit-box-shadow: 0 0 0 0.2rem rgba(254, 209, 55, 0.5) !important;
-  box-shadow: 0 0 0 0.2rem rgba(254, 209, 55, 0.5) !important;
+  box-shadow: 0 0 0 0.2rem rgba(254, 209, 55, 0.5) ;
 }
 
 #mainNav {
@@ -162,7 +162,7 @@ img::-moz-selection {
     -webkit-transition: padding-top 0.3s, padding-bottom 0.3s;
     transition: padding-top 0.3s, padding-bottom 0.3s;
     border: none;
-    background-color: ;
+    /*background-color: ;*/
   }
   #mainNav .navbar-brand {
     font-size: 1.75em;
