--- a/views/templates/layoutFront.twig
+++ b/views/templates/layoutFront.twig
@@ -73,10 +73,10 @@
         <div class="col-md-4">
           <ul class="list-inline quicklinks">
             <li class="list-inline-item">
-              <a href="#">Privacy Policy</a>
+              <a href="#">Politique de confidentialité</a>
             </li>
             <li class="list-inline-item">
-              <a href="#">Terms of Use</a>
+              <a href="#">Conditions d'utilisation </a>
             </li>
           </ul>
         </div>
