--- a/views/article/home.twig
+++ b/views/article/home.twig
@@ -153,7 +153,7 @@
                 </a>
               </li>
               <li class="">
-                <a href="/public/images/error404.jpg" download="CV.jpg">
+                <a href="/images/CV.pdf" download="CV.jpg">
                   <div class="fab fa-lien_cv">Mon CV</div>
                 </a>
               </li>
